--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,55 +1,55 @@
 #card {
-  width: 200px;
-  text-align: center;
-  margin-top: 20px;
-  border: 1px solid rgb(51 51 51 / 10%);
-  box-shadow: 1px 1px rgb(51 51 51 / 10%);
-}
+   width: 200px;
+   text-align: center;
+   margin: 20px;
+   border: 1px solid rgb(51 51 51 / 10%);
+   box-shadow: 1px 1px rgb(51 51 51 / 10%);
+ }
 
 #city {
-  padding-top: 10px;
-  border-bottom: 1px solid rgb(51 51 51 / 10%);
-}
+   padding-top: 10px;
+   border-bottom: 1px solid rgb(51 51 51 / 10%);
+ }
 
 #city span {
-  font-size: 25px;
-  color: #737C84;
-}
+   font-size: 25px;
+   color:#737C84;
+ }
 
 #temperature span {
-  font-size: 100px;
-}
+   font-size: 100px;
+ }
 
 #footer {
-  background: rgb(241, 241, 241, 0.5);
-  padding-bottom: 10px;
-}
+   background: rgb(241, 241, 241, 0.5);
+   padding-bottom: 10px;
+ }
 
 #humidityPressure {
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
+   padding: 10px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+ }
 
 #humidity{
-  font-size: 12px;
-}
+   font-size: 12px;
+ }
 
 #pressure{
-  font-size: 12px;
-}
+   font-size: 12px;
+ }
 
 #updated {
-  font-size: 7px;
-  color: #B4B4B4;
-}
+   font-size: 7px;
+   color:#B4B4B4;
+ }
 
 #value {
-  color: #737C84;
-}
+   color:#737C84;
+ }
 
 #aaa {
-  color: #B4B4B4;
-}
+   color:#B4B4B4;
+ }
