--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 #App {
+  background-color: #EBEBEB;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center
 }
 
 @media only screen and (max-width: 600px) {
   #App {
-  flex-direction: column;
+    flex-direction: column;
+    align-items: center;
   }
 }
