--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -4,6 +4,7 @@
    margin: 20px;
    border: 1px solid rgb(51 51 51 / 10%);
    box-shadow: 1px 1px rgb(51 51 51 / 10%);
+   background-color: #fff;
  }
 
 #city {
